Refactor Wrapper, Engine classes.

--- a/Wrapper/Wrapper.vcxproj.filters
+++ b/Wrapper/Wrapper.vcxproj.filters
@@ -21,5 +21,13 @@
     <ClInclude Include="Engine.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
+    <ClInclude Include="Subj.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>Файлы ресурсов</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
